# TaskbarGame

./: .gitignore  LICENSE  PROMPT.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
