[package]
name = "taskbar-garden"
version = "0.1.0"
description = "Cozy pixel-art gardening game in your system tray"
authors = ["TaskbarGame contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
